Use QTemporaryDir class instead of manual temporary directory management.

Should help w/ preventing file leakage. In odd case that it does crash on
import, QTemporaryDir should safely clean up files (and, if not, files should
at least be cleaned on reboot.)

BUG:436965